--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% if site.talkmap_link == true %}
 
-<p style="text-decoration:underline;"> See a map of all the places I've given a talk! </p>
+<p style="text-decoration:none;"> See a map of all the places I've given a talk! </p>
 
 {% endif %}
 
