--- a/_pages/services.html
+++ b/_pages/services.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "TPC Member"
+title: "Technical Program Committee Member"
 permalink: /services/
 author_profile: true
 ---
