--- a/_pages/services.html
+++ b/_pages/services.html
@@ -5,13 +5,18 @@ permalink: /services/
 author_profile: true
 ---
 
-{% if site.servicemap_link == true %}
 
-<p style="text-decoration:none;"> See a map of all the places I've given a talk! </p>
+## Reviewer for Journals
+* IEEE Transactions on Wireless Communications
+* IEEE Transactions on Communications
 
-{% endif %}
 
-{% for post in site.services reversed %}
-  {% include archive-single-service.html %}
-{% endfor %}
+## TPC (Technical Program Committee)
+* IEEE PIMRC’24 Track 1 PHY & Fundamentals, 2024
+* IEEE WCNC 2024 - WS-07: Integrated, Intelligent and Ubiquitous Connectivity for 6G Networks, 2024
+* IEEE Conference on Vehicular Technology (VTC) - Radio Access Technology and Heterogeneous Networks, 2024.
+
+
+## Reviewer for Conferences
+* IEEE International Conference on Communications (ICC)
 
